W2V Cross-validation